add sudo to gem installation

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,5 +17,5 @@ jobs:
       run: lein deps
     - name: Run tests
       run: | 
-        gem install rake
+        sudo gem install rake
         rake
