[new] [Build] [#509] Add native-image test to CI (@borkdude)
This commit adds:

* a test-native project in which httpkit client + server is tests with GraalVM native-image
* a deps.edn which is used by test-native but can be used by any deps.edn user
* a Github Action yml for running test-native in linux, macOS and Windows
* reflection fixes in httpkit server which were found during the tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.iml
-.clj-kondo/
-.lsp/
+.cache
 .calva/
 *jar
 .classpath
@@ -15,3 +14,7 @@ pom.xml*
 /target
 /.idea
 /_site
+native-test-0.0.1-standalone
+native-test-0.0.1-standalone.build_artifacts.txt
+target
+.lein-repl-history
