--- a/.github/workflows/main-tests.yml
+++ b/.github/workflows/main-tests.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: apt update
       - run: apt install -y rake
-      - run: lein test :gha
+      - run: lein test-gha
