--- a/.github/workflows/main-tests.yml
+++ b/.github/workflows/main-tests.yml
@@ -3,10 +3,28 @@ on: [push, pull_request]
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
-    container: clojure:openjdk-17-lein-buster
+    strategy:
+      matrix:
+        java: ['17', '19', '21']
+        os: [ubuntu-latest]
+
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - run: apt update
-      - run: apt install -y rake
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'corretto'
+          java-version: ${{ matrix.java }}
+
+      - uses: DeLaGuardo/setup-clojure@12.5
+        with:
+          lein: latest
+
+      - uses: actions/cache@v4
+        id: cache-deps
+        with:
+          path: ~/.m2/repository
+          key: deps-${{ hashFiles('project.clj') }}
+          restore-keys: deps-
+
       - run: lein test-ci
