--- a/.github/workflows/graal-tests.yml
+++ b/.github/workflows/graal-tests.yml
@@ -1,13 +1,11 @@
 name: Graal tests
 on: [push, pull_request]
-defaults:
-  run:
-    working-directory: test-graal
 
 jobs:
   test:
     strategy:
       matrix:
+        java: ['17']
         os: [ubuntu-latest, macOS-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
@@ -16,7 +14,7 @@ jobs:
       - uses: graalvm/setup-graalvm@v1
         with:
           version: 'latest'
-          java-version: '17'
+          java-version: ${{ matrix.java }}
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -27,12 +25,10 @@ jobs:
 
       - uses: actions/cache@v4
         with:
-          path: |
-            ~/.m2/repository
-            ~/.gitlibs
-            ~/.deps.clj
-
+          path: ~/.m2/repository
           key: deps-${{ hashFiles('deps.edn') }}
           restore-keys: deps-
 
-      - run: bb run-graal-tests
+      - name: Run Graal tests
+        run: bb run-graal-tests
+        working-directory: test-graal
